--- a/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
+++ b/app/backend/notification-service/configuration/src/main/resources/application-prod.yml
@@ -34,6 +34,8 @@ eureka:
     register-with-eureka: true
     eureka-server-connect-timeout-seconds: 15
     eureka-server-read-timeout-seconds: 15
+    eureka-server-d-n-s-name: service-discovery.railway.internal
+    eureka-server-port: 8761
     serviceUrl:
       defaultZone: http://service-discovery.railway.internal:8761/eureka/
 
