--- a/app/backend/quote-service/build.gradle
+++ b/app/backend/quote-service/build.gradle
@@ -32,6 +32,10 @@ subprojects {
 		sourceCompatibility = '11'
 	}
 
+	compileJava {
+		options.encoding = "UTF-8"
+	}
+
 	configurations {
 		compileOnly {
 			extendsFrom annotationProcessor
@@ -46,6 +50,7 @@ subprojects {
 		set('logstashVersion', "7.4")
 		set('assertJVersion', "3.24.2")
 		set('mockitoVersion', "5.4.0")
+		set('archUnitVersion', '1.1.0')
 		set('testcontainersVersion', "1.17.3")
 	}
 
@@ -71,6 +76,7 @@ subprojects {
 		testImplementation group: 'org.assertj', name: 'assertj-core', version: assertJVersion
 		testImplementation group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
 		testImplementation 'org.testcontainers:junit-jupiter'
+		testImplementation group: 'com.tngtech.archunit', name: 'archunit-junit5', version: archUnitVersion
 	}
 
 	dependencyManagement {
